# ipa-renamer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
