[package]
name = "ipa_renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.0"
zip = { version = "0.6.2" }
plist = "1"
colored = "2.0.0"