[package]
name = "ipa_renamer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "ipa_renamer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.0"
zip = { version = "0.6.2" }
plist = "1"
colored = "2.0.0"